# exploratory-tech-studio

./: .gitignore  CODE_OF_CONDUCT.md  README.md  requirements.txt  scratchwork.txt
embedded-projects/arduino/analog_voltage_monitor/: analog_voltage_monitor.ino
embedded-projects/arduino/digital_clock/: digital_clock.ino
embedded-projects/arduino/measure_temperature_and_humidity/: measure_temperature_and_humidity.ino
embedded-projects/embedded/: details.txt
embedded-projects/lithography-data-optimization-for-multi-beam-mask-writers/: scratchwork.txt
embedded-projects/motor-control-with-raspberry-pi/: scratchwork.txt
embedded-projects/raspberry-pi/motor-control-with-raspberry-pi/: motor_control.cpp
embedded-projects/rtos/: Jenkinsfile  README.md  main.cpp  rtos.cpp  rtos.h  scratchwork.txt
embedded-projects/temperature-and-humidity-monitoring/: New Text Document.txt
interdisciplinary-projects/lithography-data-optimization-for-multi-beam-mask-writers/: input_data.csv  input_data_description.md  lithography_script.py
leetcode/easy/: valid_parantheses_20.cpp  valid_parantheses_20.java
machine-learning/image-classification/: main.py
machine-learning/image-creation/: main.py
machine-learning/movie-recommendation-system/: movie_recommendation.ipynb
physics-projects/multi-beam-mask-writer-datapath-simulation/: electron_scattering_simulation.py  scratchwork.txt
physics-projects/quatnum-computing-simulator-in-python/: quantum_computer_simulator.py  quantum_grover_simulation.py  scratchwork.txt
projects/arduino_uno/frequency_measurement/: frequency_measurement.ino
projects/physics/quantum-grover-simulation/: quantum_grover_simulation.py
tech-canvas-projects/arduino-uno/analog_to_value_voltage_converter/: analog_to_value_voltage_converter.ino
tech-canvas-projects/arduino-uno/cw_to_hp/: cw_to_hp.ino
tech-canvas-projects/mathematical-foundations/1-arithmetic/: CMakeLists.txt  arithmeticPropertiesAndRules.cpp  arithmeticPropertiesAndRules.h  floatingPointArithmetic.cpp  floatingPointArithmetic.h  main.cpp  matrixArithmetic.cpp  matrixArithmetic.h  scratchwork.md  vectorArithmetic.cpp  vectorArithmetic.h
tech-canvas-projects/natural-language-processing/cfg-sentence-parser/: parser.py
tech-canvas-projects/natural-language-processing/legal-document-classifier-with-bert/: legal_doc_classification.py
tech-canvas/arduino-uno/analog_to_value_voltage_converter/: analog_to_value_voltage_converter.ino
tech-studio-projects/command-line-tools/directory-tree-generator/directory-tree-generator/: CMakeLists.txt  cli.cpp  cli.h  dirtree.cpp  dirtree.h  main.cpp
tech-studio-projects/financial-industry/: financial_reporting_docs.md  quantitative_finance_docs.md
tech-studio-projects/financial-industry/algo-trading-platform/cpp/algo-trading-platform/: CMakeLists.txt  algo-trading-platform.cpp
tech-studio-projects/financial-industry/algo-trading-platform/cpp/trading-engine-server/: CMakeLists.txt  ITradingEngineServer.h  TradingEngineServer.cpp  TradingEngineServer.h  TradingEngineServerConfiguration.cpp  TradingEngineServerConfiguration.h  TradingEngineServerHostBuilder.cpp  TradingEngineServerHostBuilder.h  TradingEngineServerServiceProvider.cpp  TradingEngineServerServiceProvider.h
tech-studio-projects/financial-industry/blockchain-and-cryptocurrency-simulation/: CMakeLists.txt  README.md  main.cpp
tech-studio-projects/financial-industry/blockchain-and-cryptocurrency-simulation/include/OpenSSL/: pem.h  rsa.h  sha.h
tech-studio-projects/financial-industry/blockchain-and-cryptocurrency-simulation/java/: README.md  pom.xml  requirements.md
tech-studio-projects/financial-industry/blockchain-and-cryptocurrency-simulation/java/src/main/java/com/example/bandcsimu/: Block.java  Blockchain.java  BlockchainAndCryptoApp.java  NetworkNode.java  ProofOfStake.java  ProofOfWork.java  Transaction.java
tech-studio-projects/financial-industry/blockchain-and-cryptocurrency-simulation/java/src/main/resources/: application.properties
tech-studio-projects/financial-industry/blockchain-and-cryptocurrency-simulation/java/src/test/java/com/example/bandcsimu/: BlockTests.java  BlockchainAndCryptoAppTests.java  BlockchainTests.java  ProofOfStakeTests.java  ProofOfWorkTests.java  TransactionTests.java
tech-studio-projects/financial-industry/blockchain-and-cryptocurrency-simulation/src/: Block.cpp  Block.h  Blockchain.cpp  Blockchain.h  NetworkNode.cpp  NetworkNode.h  ProofOfStake.cpp  ProofOfStake.h  ProofOfWork.cpp  ProofOfWork.h  Transaction.cpp  Transaction.h
tech-studio-projects/financial-industry/credit-scoring-algorithms/cpp/: CMakeLists.txt  README.md
tech-studio-projects/financial-industry/credit-scoring-algorithms/cpp/data/: train_data.csv
tech-studio-projects/financial-industry/credit-scoring-algorithms/cpp/src/: logistic_regression.cpp
tech-studio-projects/financial-industry/credit-scoring-algorithms/cpp/tests/test_data/: test_data.csv  train_data.csv
tech-studio-projects/financial-industry/credit-scoring-algorithms/tests/: CMakeLists.txt  test_main.cpp
tech-studio-projects/financial-industry/credit-scoring-algorithms/tests/test_data/: invalid_test_data.csv
tech-studio-projects/leetcode/: README.md
tech-studio-projects/other-projects/directory-tree-generator/c/dir-tree-generator/: CMakeLists.txt  cli.c  cli.h  dirtree.c  dirtree.h  main.c
tech-studio-projects/other-projects/multithreaded-webserver/cpp/MultithreadedWebserver/: CMakeLists.txt  main.cpp  server.cpp  server.hpp  thread_pool.hpp  token_bucket.hpp
tech-studio-projects/other-projects/multithreaded-webserver/cpp/tests/: CMakeLists.txt  httplib.hpp  test_server.cpp
tech-studio-projects/other-projects/multithreaded-webserver/cpp/tests/catch2/: catch.hpp
tech-studio-projects/other-projects/multithreaded-webserver/rust/: Cargo.toml
tech-studio-projects/other-projects/multithreaded-webserver/rust/src/: main.rs
tech-studio-projects/other-projects/quantum-computing-simulation/cpp/quantum-computing-simulation/: CMakeLists.txt  Qubit.cpp  Qubit.h  main.cpp
(+2186 files in other folders)
